--- a/generator/templates/generator/about.html
+++ b/generator/templates/generator/about.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-<div style="background-color:pink" class="container text-center">
+<div style="background-color:green" class="container text-center">
 <h1>
     Hello Everyone. My name is Wolfiee. This is my password generator website.
     Kindly click on the link to go to password generator page. Thank You!!!!!
